2012-10-07 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildDllToLibName): Add gnome libs.

2012-10-04 Thu  Jari Aalto  <jari.aalto@cante.net>

	* TODO: Minor udpates.

	* README: Minor adjustments.

	* INSTALL: Add install-symlinks choice.

	* Makefile (doc): Add docstring.

	* bin/cygbuild.sh (CygbuildMakeRunInstallFixPerlPostinstall): Mot used.
	(CygbuildMakeRunInstallFixPerlMain): Do not use
	CygbuildMakeRunInstallFixPerlPostinstall(). perllocal.pod handling no
	longer needed.

2012-10-03 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): in mode unpatch, do
	not immediately return if patch file is empty but check also quilt.
	(CygbuildDllToLibName): Add cases for libpng15 and libX11.
	(CygbuildCmdGPGVerifyMain): Do not fail on missing GPG key.
	(CygbuildPathBinFast): Move /usr/sbin test later.
	(CygbuildTarOptionCompress): Correct lzma case.
	(CygbuildStrToRegexpSafe): Return value in quotes.
	(CygbuildMatchPatternRemoveWord): Add function arg comments.
	(CygbuildIsEmpty): Add fast empty check.
	(CygbuildIsCygwin): Faster Cygwin arch test.
	(CygbuildIsSourceProgram): require -N, not just N.
	(CygbuildIsSourceUnpacked): Add quotes.
	(CygbuildExit): Simplify if statement.
	(CygbuildExitIfNoDir): Check arg before shift.
	(CygbuildExitIfNoFile): Check empty file arg.

2012-09-30 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/lib/cygbuild.pl: (Help::OPTIONAL EXTERNAL FILES::manpages): Explain
	how this is different from install.lst

	* bin/cygbuild.sh (CygbuildPatchApplyMaybe): Correct quilt unpatch.
	(CygbuildInstallExtraManualList): Support locale man pages.
	(CygbuildPatchApplyRun): Always use --binary options for patch(1).

2012-09-29 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildCmdInstallList): Optimize sed by removing empty lines.

2012-09-27 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh (CygbuildInstallPackageDocs): Return if no dir found.
